@@ -30,13 +30,14 @@ class PerSEOSiteMapView (SiteMapView):
         
         catalog = getToolByName(self.context, 'portal_catalog')
         query = {'Language': 'all'}
-        
+       
         query['portal_type'] = self.perseo_included_types()
-        
+
         for item in catalog.searchResults(query):
-            yield {
-                'loc': item.getURL(),
-                'lastmod': item.modified.ISO8601(),
-                #'changefreq': 'always', # hourly/daily/weekly/monthly/yearly/never
-                #'prioriy': 0.5, # 0.0 to 1.0
-            }
+            if item.getIncludedInSitemapxml:
+                yield {
+                    'loc': item.getURL(),
+                    'lastmod': item.modified.ISO8601(),
+                    #'changefreq': 'always', # hourly/daily/weekly/monthly/yearly/never
+                    #'prioriy': 0.5, # 0.0 to 1.0
+                }
