@@ -10,6 +10,7 @@ Changelog
 - Added ReallyUserFriendlyTypes vocabulary [fdelia]
 - Personalized view for sitemap.xml.gz generation, calculate content types that should be included [fdelia]
 - Added getIncludedInSitemapxml metadata and a custom index method to access this metadata [fdelia]
+- Updated sitemap.xml.gz generation view, calculate whether each object should be included, according to the getIncludedInSitemapxml metadata [fdelia]
 
 0.1.0 (2011-07-20)
 ------------------
